// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton BorderlessButton should render 1`] = `
<button
  className="ant-btn StyledButton__BorderlessButton-rhr4ab-2 dkKaru StyledButton__InlineFlexButton-rhr4ab-0 fPuGKB"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton DownloadButton should render 1`] = `
<button
  className="ant-btn StyledButton__DownloadButton-rhr4ab-5 jcFXth StyledButton__RoundedButton-rhr4ab-1 gAmeRw StyledButton__InlineFlexButton-rhr4ab-0 fPuGKB"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton DropDownButton should render 1`] = `
<button
  className="ant-btn StyledButton__DropDownButton-rhr4ab-7 eRWzOk StyledButton__RoundedButton-rhr4ab-1 gAmeRw StyledButton__InlineFlexButton-rhr4ab-0 fPuGKB"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton GithubButton should render 1`] = `
<button
  className="ant-btn StyledButton__GithubButton-rhr4ab-3 jZOOiU StyledButton__RoundedButton-rhr4ab-1 gAmeRw StyledButton__InlineFlexButton-rhr4ab-0 fPuGKB"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton LineButton should render 1`] = `
<button
  className="ant-btn StyledButton__LineButton-rhr4ab-6 jWJDGA StyledButton__RoundedButton-rhr4ab-1 gAmeRw StyledButton__InlineFlexButton-rhr4ab-0 fPuGKB"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton RoundedButton should render 1`] = `
<button
  className="ant-btn StyledButton__RoundedButton-rhr4ab-1 gAmeRw StyledButton__InlineFlexButton-rhr4ab-0 fPuGKB"
  onClick={[Function]}
  type="button"
/>
`;

exports[`StyledButton SmDownloadButton should render 1`] = `
<button
  className="ant-btn StyledButton__SmDownloadButton-rhr4ab-4 bmPGPl StyledButton__BorderlessButton-rhr4ab-2 dkKaru StyledButton__InlineFlexButton-rhr4ab-0 fPuGKB"
  onClick={[Function]}
  type="button"
/>
`;
